--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Right Understanding</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The problem with monetary targets in trading 💰</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>How to Trade Futures (Step-by-Step for Beginners) 💡</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -431,7 +431,7 @@
                     <div class="video-info">
                         <h3>Philadelphia Hoagie Rolls 2.0 | The Ultimate Upgrade</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -574,7 +574,7 @@
                     <div class="video-info">
                         <h3>The Unawakened Human Condition | Eckhart Tolle on Everyday Presence (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -662,7 +662,7 @@
                     <div class="video-info">
                         <h3>Start Your Day With Presence | Eckhart Tolle On Everyday Presence (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -673,7 +673,7 @@
                     <div class="video-info">
                         <h3>Do Aliens Exist? NASA Astronaut Sunita Williams & Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>Testing 100 Stocks in a Single MT5 Backtest (Free Code Setup)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -882,7 +882,7 @@
                     <div class="video-info">
                         <h3>How to End Stress and Anxiety | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1443,7 +1443,7 @@
                     <div class="video-info">
                         <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>The problem with monetary targets in trading 💰</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5149,7 +5149,7 @@
                         <div class="video-info">
                             <h3>How to Trade Futures (Step-by-Step for Beginners) 💡</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5314,7 +5314,7 @@
                         <div class="video-info">
                             <h3>Testing 100 Stocks in a Single MT5 Backtest (Free Code Setup)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Right Understanding</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7414,7 +7414,7 @@
                         <div class="video-info">
                             <h3>The Unawakened Human Condition | Eckhart Tolle on Everyday Presence (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7447,7 +7447,7 @@
                         <div class="video-info">
                             <h3>Start Your Day With Presence | Eckhart Tolle On Everyday Presence (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7458,7 +7458,7 @@
                         <div class="video-info">
                             <h3>Do Aliens Exist? NASA Astronaut Sunita Williams & Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7535,7 +7535,7 @@
                         <div class="video-info">
                             <h3>How to End Stress and Anxiety | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7700,7 +7700,7 @@
                         <div class="video-info">
                             <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -8768,7 +8768,7 @@
                         <div class="video-info">
                             <h3>Philadelphia Hoagie Rolls 2.0 | The Ultimate Upgrade</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
